<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.expresspay.access_control.CheckInActivity"
    android:background="@android:color/white">


    <ImageButton
        android:id="@+id/back_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_icon"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/passNum_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passnumber"
        android:textColor="@color/deepGreen"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/back_imageButton"
        app:layout_constraintBottom_toBottomOf="@id/back_imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_num_field"
        android:background="@drawable/edittext_border"
        android:theme="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/passNum_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/pass_num"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_Edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="11dp"
            android:paddingTop="5dp"
            android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>
   <Button
        android:id="@+id/checkedIn_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/check_in_btn"
        android:background="@color/blue"
        android:textColor="@android:color/white"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>
